Add js to make new pizzas append to a list on submit, add html and js to make listed pizzas clickable for details, add button and js to allow users to add another pizza and reset the form if they want to add one.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,24 @@ h4 {
   margin-right: 20px;
   margin-left: 20px;
 }
+
+#another-pizza, #pizza-details {
+  display: none;
+}
+
+.pizza {
+  cursor: pointer;
+  color: orange;
+}
+
+.pizza:hover {
+  text-decoration: underline;
+}
+
+.btn {
+  margin-bottom: 20px;
+}
+
+li {
+  font-size: 2em;
+}
